project('libcxx', 'cpp')

abi_srcdir = 'libcxxabi' / 'src'
lib_srcdir = 'libcxx' / 'src'
lib_incdir = 'libcxx' / 'include'

install_headers([
    lib_incdir / '__assert',
    lib_incdir / '__availability',
    lib_incdir / '__bit_reference',
    lib_incdir / '__bits',
    lib_incdir / '__bsd_locale_defaults.h',
    lib_incdir / '__bsd_locale_fallbacks.h',
    lib_incdir / '__config',
    lib_incdir / '__debug',
    lib_incdir / '__errc',
    lib_incdir / '__hash_table',
    lib_incdir / '__locale',
    lib_incdir / '__mbstate_t.h',
    lib_incdir / '__mutex_base',
    lib_incdir / '__node_handle',
    lib_incdir / '__split_buffer',
    lib_incdir / '__std_stream',
    lib_incdir / '__threading_support',
    lib_incdir / '__tree',
    lib_incdir / '__tuple',
    lib_incdir / '__undef_macros',
    lib_incdir / 'algorithm',
    lib_incdir / 'any',
    lib_incdir / 'array',
    lib_incdir / 'atomic',
    lib_incdir / 'barrier',
    lib_incdir / 'bit',
    lib_incdir / 'bitset',
    lib_incdir / 'cassert',
    lib_incdir / 'ccomplex',
    lib_incdir / 'cctype',
    lib_incdir / 'cerrno',
    lib_incdir / 'cfenv',
    lib_incdir / 'cfloat',
    lib_incdir / 'charconv',
    lib_incdir / 'chrono',
    lib_incdir / 'cinttypes',
    lib_incdir / 'ciso646',
    lib_incdir / 'climits',
    lib_incdir / 'clocale',
    lib_incdir / 'cmath',
    lib_incdir / 'codecvt',
    lib_incdir / 'compare',
    lib_incdir / 'complex',
    lib_incdir / 'complex.h',
    lib_incdir / 'concepts',
    lib_incdir / 'condition_variable',
    lib_incdir / 'coroutine',
    lib_incdir / 'csetjmp',
    lib_incdir / 'csignal',
    lib_incdir / 'cstdarg',
    lib_incdir / 'cstdbool',
    lib_incdir / 'cstddef',
    lib_incdir / 'cstdint',
    lib_incdir / 'cstdio',
    lib_incdir / 'cstdlib',
    lib_incdir / 'cstring',
    lib_incdir / 'ctgmath',
    lib_incdir / 'ctime',
    lib_incdir / 'ctype.h',
    lib_incdir / 'cuchar',
    lib_incdir / 'cwchar',
    lib_incdir / 'cwctype',
    lib_incdir / 'deque',
    lib_incdir / 'errno.h',
    lib_incdir / 'exception',
    lib_incdir / 'execution',
    lib_incdir / 'fenv.h',
    lib_incdir / 'filesystem',
    lib_incdir / 'float.h',
    lib_incdir / 'format',
    lib_incdir / 'forward_list',
    lib_incdir / 'fstream',
    lib_incdir / 'functional',
    lib_incdir / 'future',
    lib_incdir / 'initializer_list',
    lib_incdir / 'inttypes.h',
    lib_incdir / 'iomanip',
    lib_incdir / 'ios',
    lib_incdir / 'iosfwd',
    lib_incdir / 'iostream',
    lib_incdir / 'istream',
    lib_incdir / 'iterator',
    lib_incdir / 'latch',
    lib_incdir / 'limits',
    lib_incdir / 'limits.h',
    lib_incdir / 'list',
    lib_incdir / 'locale',
    lib_incdir / 'locale.h',
    lib_incdir / 'map',
    lib_incdir / 'math.h',
    lib_incdir / 'memory',
    lib_incdir / 'mutex',
    lib_incdir / 'new',
    lib_incdir / 'numbers',
    lib_incdir / 'numeric',
    lib_incdir / 'optional',
    lib_incdir / 'ostream',
    lib_incdir / 'queue',
    lib_incdir / 'random',
    lib_incdir / 'ranges',
    lib_incdir / 'ratio',
    lib_incdir / 'regex',
    lib_incdir / 'scoped_allocator',
    lib_incdir / 'semaphore',
    lib_incdir / 'set',
    lib_incdir / 'setjmp.h',
    lib_incdir / 'shared_mutex',
    lib_incdir / 'span',
    lib_incdir / 'sstream',
    lib_incdir / 'stack',
    lib_incdir / 'stdatomic.h',
    lib_incdir / 'stdbool.h',
    lib_incdir / 'stddef.h',
    lib_incdir / 'stdexcept',
    lib_incdir / 'stdint.h',
    lib_incdir / 'stdio.h',
    lib_incdir / 'stdlib.h',
    lib_incdir / 'streambuf',
    lib_incdir / 'string',
    lib_incdir / 'string.h',
    lib_incdir / 'string_view',
    lib_incdir / 'strstream',
    lib_incdir / 'system_error',
    lib_incdir / 'tgmath.h',
    lib_incdir / 'thread',
    lib_incdir / 'tuple',
    lib_incdir / 'type_traits',
    lib_incdir / 'typeindex',
    lib_incdir / 'typeinfo',
    lib_incdir / 'uchar.h',
    lib_incdir / 'unordered_map',
    lib_incdir / 'unordered_set',
    lib_incdir / 'utility',
    lib_incdir / 'valarray',
    lib_incdir / 'variant',
    lib_incdir / 'vector',
    lib_incdir / 'version',
    lib_incdir / 'wchar.h',
    lib_incdir / 'wctype.h',
  ],
  subdir: 'c++',
)
install_headers([
    lib_incdir / '__algorithm' / 'adjacent_find.h',
    lib_incdir / '__algorithm' / 'all_of.h',
    lib_incdir / '__algorithm' / 'any_of.h',
    lib_incdir / '__algorithm' / 'binary_search.h',
    lib_incdir / '__algorithm' / 'clamp.h',
    lib_incdir / '__algorithm' / 'comp.h',
    lib_incdir / '__algorithm' / 'comp_ref_type.h',
    lib_incdir / '__algorithm' / 'copy.h',
    lib_incdir / '__algorithm' / 'copy_backward.h',
    lib_incdir / '__algorithm' / 'copy_if.h',
    lib_incdir / '__algorithm' / 'copy_n.h',
    lib_incdir / '__algorithm' / 'count.h',
    lib_incdir / '__algorithm' / 'count_if.h',
    lib_incdir / '__algorithm' / 'equal.h',
    lib_incdir / '__algorithm' / 'equal_range.h',
    lib_incdir / '__algorithm' / 'fill.h',
    lib_incdir / '__algorithm' / 'fill_n.h',
    lib_incdir / '__algorithm' / 'find.h',
    lib_incdir / '__algorithm' / 'find_end.h',
    lib_incdir / '__algorithm' / 'find_first_of.h',
    lib_incdir / '__algorithm' / 'find_if.h',
    lib_incdir / '__algorithm' / 'find_if_not.h',
    lib_incdir / '__algorithm' / 'for_each.h',
    lib_incdir / '__algorithm' / 'for_each_n.h',
    lib_incdir / '__algorithm' / 'generate.h',
    lib_incdir / '__algorithm' / 'generate_n.h',
    lib_incdir / '__algorithm' / 'half_positive.h',
    lib_incdir / '__algorithm' / 'in_found_result.h',
    lib_incdir / '__algorithm' / 'in_fun_result.h',
    lib_incdir / '__algorithm' / 'in_in_out_result.h',
    lib_incdir / '__algorithm' / 'in_in_result.h',
    lib_incdir / '__algorithm' / 'in_out_out_result.h',
    lib_incdir / '__algorithm' / 'in_out_result.h',
    lib_incdir / '__algorithm' / 'includes.h',
    lib_incdir / '__algorithm' / 'inplace_merge.h',
    lib_incdir / '__algorithm' / 'is_heap.h',
    lib_incdir / '__algorithm' / 'is_heap_until.h',
    lib_incdir / '__algorithm' / 'is_partitioned.h',
    lib_incdir / '__algorithm' / 'is_permutation.h',
    lib_incdir / '__algorithm' / 'is_sorted.h',
    lib_incdir / '__algorithm' / 'is_sorted_until.h',
    lib_incdir / '__algorithm' / 'iter_swap.h',
    lib_incdir / '__algorithm' / 'iterator_operations.h',
    lib_incdir / '__algorithm' / 'lexicographical_compare.h',
    lib_incdir / '__algorithm' / 'lower_bound.h',
    lib_incdir / '__algorithm' / 'make_heap.h',
    lib_incdir / '__algorithm' / 'make_projected.h',
    lib_incdir / '__algorithm' / 'max.h',
    lib_incdir / '__algorithm' / 'max_element.h',
    lib_incdir / '__algorithm' / 'merge.h',
    lib_incdir / '__algorithm' / 'min.h',
    lib_incdir / '__algorithm' / 'min_element.h',
    lib_incdir / '__algorithm' / 'min_max_result.h',
    lib_incdir / '__algorithm' / 'minmax.h',
    lib_incdir / '__algorithm' / 'minmax_element.h',
    lib_incdir / '__algorithm' / 'mismatch.h',
    lib_incdir / '__algorithm' / 'move.h',
    lib_incdir / '__algorithm' / 'move_backward.h',
    lib_incdir / '__algorithm' / 'next_permutation.h',
    lib_incdir / '__algorithm' / 'none_of.h',
    lib_incdir / '__algorithm' / 'nth_element.h',
    lib_incdir / '__algorithm' / 'partial_sort.h',
    lib_incdir / '__algorithm' / 'partial_sort_copy.h',
    lib_incdir / '__algorithm' / 'partition.h',
    lib_incdir / '__algorithm' / 'partition_copy.h',
    lib_incdir / '__algorithm' / 'partition_point.h',
    lib_incdir / '__algorithm' / 'pop_heap.h',
    lib_incdir / '__algorithm' / 'prev_permutation.h',
    lib_incdir / '__algorithm' / 'push_heap.h',
    lib_incdir / '__algorithm' / 'ranges_adjacent_find.h',
    lib_incdir / '__algorithm' / 'ranges_all_of.h',
    lib_incdir / '__algorithm' / 'ranges_any_of.h',
    lib_incdir / '__algorithm' / 'ranges_binary_search.h',
    lib_incdir / '__algorithm' / 'ranges_copy.h',
    lib_incdir / '__algorithm' / 'ranges_copy_backward.h',
    lib_incdir / '__algorithm' / 'ranges_copy_if.h',
    lib_incdir / '__algorithm' / 'ranges_copy_n.h',
    lib_incdir / '__algorithm' / 'ranges_count.h',
    lib_incdir / '__algorithm' / 'ranges_count_if.h',
    lib_incdir / '__algorithm' / 'ranges_equal.h',
    lib_incdir / '__algorithm' / 'ranges_equal_range.h',
    lib_incdir / '__algorithm' / 'ranges_fill.h',
    lib_incdir / '__algorithm' / 'ranges_fill_n.h',
    lib_incdir / '__algorithm' / 'ranges_find.h',
    lib_incdir / '__algorithm' / 'ranges_find_end.h',
    lib_incdir / '__algorithm' / 'ranges_find_first_of.h',
    lib_incdir / '__algorithm' / 'ranges_find_if.h',
    lib_incdir / '__algorithm' / 'ranges_find_if_not.h',
    lib_incdir / '__algorithm' / 'ranges_for_each.h',
    lib_incdir / '__algorithm' / 'ranges_for_each_n.h',
    lib_incdir / '__algorithm' / 'ranges_generate.h',
    lib_incdir / '__algorithm' / 'ranges_generate_n.h',
    lib_incdir / '__algorithm' / 'ranges_includes.h',
    lib_incdir / '__algorithm' / 'ranges_inplace_merge.h',
    lib_incdir / '__algorithm' / 'ranges_is_heap.h',
    lib_incdir / '__algorithm' / 'ranges_is_heap_until.h',
    lib_incdir / '__algorithm' / 'ranges_is_partitioned.h',
    lib_incdir / '__algorithm' / 'ranges_is_sorted.h',
    lib_incdir / '__algorithm' / 'ranges_is_sorted_until.h',
    lib_incdir / '__algorithm' / 'ranges_iterator_concept.h',
    lib_incdir / '__algorithm' / 'ranges_lexicographical_compare.h',
    lib_incdir / '__algorithm' / 'ranges_lower_bound.h',
    lib_incdir / '__algorithm' / 'ranges_make_heap.h',
    lib_incdir / '__algorithm' / 'ranges_max.h',
    lib_incdir / '__algorithm' / 'ranges_max_element.h',
    lib_incdir / '__algorithm' / 'ranges_merge.h',
    lib_incdir / '__algorithm' / 'ranges_min.h',
    lib_incdir / '__algorithm' / 'ranges_min_element.h',
    lib_incdir / '__algorithm' / 'ranges_minmax.h',
    lib_incdir / '__algorithm' / 'ranges_minmax_element.h',
    lib_incdir / '__algorithm' / 'ranges_mismatch.h',
    lib_incdir / '__algorithm' / 'ranges_move.h',
    lib_incdir / '__algorithm' / 'ranges_move_backward.h',
    lib_incdir / '__algorithm' / 'ranges_none_of.h',
    lib_incdir / '__algorithm' / 'ranges_nth_element.h',
    lib_incdir / '__algorithm' / 'ranges_partial_sort.h',
    lib_incdir / '__algorithm' / 'ranges_partial_sort_copy.h',
    lib_incdir / '__algorithm' / 'ranges_partition.h',
    lib_incdir / '__algorithm' / 'ranges_partition_copy.h',
    lib_incdir / '__algorithm' / 'ranges_partition_point.h',
    lib_incdir / '__algorithm' / 'ranges_pop_heap.h',
    lib_incdir / '__algorithm' / 'ranges_push_heap.h',
    lib_incdir / '__algorithm' / 'ranges_remove.h',
    lib_incdir / '__algorithm' / 'ranges_remove_copy.h',
    lib_incdir / '__algorithm' / 'ranges_remove_copy_if.h',
    lib_incdir / '__algorithm' / 'ranges_remove_if.h',
    lib_incdir / '__algorithm' / 'ranges_replace.h',
    lib_incdir / '__algorithm' / 'ranges_replace_copy.h',
    lib_incdir / '__algorithm' / 'ranges_replace_copy_if.h',
    lib_incdir / '__algorithm' / 'ranges_replace_if.h',
    lib_incdir / '__algorithm' / 'ranges_reverse.h',
    lib_incdir / '__algorithm' / 'ranges_reverse_copy.h',
    lib_incdir / '__algorithm' / 'ranges_rotate_copy.h',
    lib_incdir / '__algorithm' / 'ranges_search.h',
    lib_incdir / '__algorithm' / 'ranges_search_n.h',
    lib_incdir / '__algorithm' / 'ranges_set_difference.h',
    lib_incdir / '__algorithm' / 'ranges_set_intersection.h',
    lib_incdir / '__algorithm' / 'ranges_set_symmetric_difference.h',
    lib_incdir / '__algorithm' / 'ranges_set_union.h',
    lib_incdir / '__algorithm' / 'ranges_shuffle.h',
    lib_incdir / '__algorithm' / 'ranges_sort.h',
    lib_incdir / '__algorithm' / 'ranges_sort_heap.h',
    lib_incdir / '__algorithm' / 'ranges_stable_partition.h',
    lib_incdir / '__algorithm' / 'ranges_stable_sort.h',
    lib_incdir / '__algorithm' / 'ranges_swap_ranges.h',
    lib_incdir / '__algorithm' / 'ranges_transform.h',
    lib_incdir / '__algorithm' / 'ranges_unique.h',
    lib_incdir / '__algorithm' / 'ranges_unique_copy.h',
    lib_incdir / '__algorithm' / 'ranges_upper_bound.h',
    lib_incdir / '__algorithm' / 'remove.h',
    lib_incdir / '__algorithm' / 'remove_copy.h',
    lib_incdir / '__algorithm' / 'remove_copy_if.h',
    lib_incdir / '__algorithm' / 'remove_if.h',
    lib_incdir / '__algorithm' / 'replace.h',
    lib_incdir / '__algorithm' / 'replace_copy.h',
    lib_incdir / '__algorithm' / 'replace_copy_if.h',
    lib_incdir / '__algorithm' / 'replace_if.h',
    lib_incdir / '__algorithm' / 'reverse.h',
    lib_incdir / '__algorithm' / 'reverse_copy.h',
    lib_incdir / '__algorithm' / 'rotate.h',
    lib_incdir / '__algorithm' / 'rotate_copy.h',
    lib_incdir / '__algorithm' / 'sample.h',
    lib_incdir / '__algorithm' / 'search.h',
    lib_incdir / '__algorithm' / 'search_n.h',
    lib_incdir / '__algorithm' / 'set_difference.h',
    lib_incdir / '__algorithm' / 'set_intersection.h',
    lib_incdir / '__algorithm' / 'set_symmetric_difference.h',
    lib_incdir / '__algorithm' / 'set_union.h',
    lib_incdir / '__algorithm' / 'shift_left.h',
    lib_incdir / '__algorithm' / 'shift_right.h',
    lib_incdir / '__algorithm' / 'shuffle.h',
    lib_incdir / '__algorithm' / 'sift_down.h',
    lib_incdir / '__algorithm' / 'sort.h',
    lib_incdir / '__algorithm' / 'sort_heap.h',
    lib_incdir / '__algorithm' / 'stable_partition.h',
    lib_incdir / '__algorithm' / 'stable_sort.h',
    lib_incdir / '__algorithm' / 'swap_ranges.h',
    lib_incdir / '__algorithm' / 'transform.h',
    lib_incdir / '__algorithm' / 'unique.h',
    lib_incdir / '__algorithm' / 'unique_copy.h',
    lib_incdir / '__algorithm' / 'unwrap_iter.h',
    lib_incdir / '__algorithm' / 'upper_bound.h',
  ],
  subdir: 'c++' / '__algorithm',
)
install_headers([
    lib_incdir / '__bit' / 'bit_cast.h',
    lib_incdir / '__bit' / 'byteswap.h',
  ],
  subdir: 'c++' / '__bit',
)
install_headers([
    lib_incdir / '__charconv' / 'chars_format.h',
    lib_incdir / '__charconv' / 'from_chars_result.h',
    lib_incdir / '__charconv' / 'tables.h',
    lib_incdir / '__charconv' / 'to_chars_base_10.h',
    lib_incdir / '__charconv' / 'to_chars_result.h',
  ],
  subdir: 'c++' / '__charconv',
)
install_headers([
    lib_incdir / '__chrono' / 'calendar.h',
    lib_incdir / '__chrono' / 'convert_to_timespec.h',
    lib_incdir / '__chrono' / 'day.h',
    lib_incdir / '__chrono' / 'duration.h',
    lib_incdir / '__chrono' / 'file_clock.h',
    lib_incdir / '__chrono' / 'hh_mm_ss.h',
    lib_incdir / '__chrono' / 'high_resolution_clock.h',
    lib_incdir / '__chrono' / 'literals.h',
    lib_incdir / '__chrono' / 'month.h',
    lib_incdir / '__chrono' / 'month_weekday.h',
    lib_incdir / '__chrono' / 'monthday.h',
    lib_incdir / '__chrono' / 'steady_clock.h',
    lib_incdir / '__chrono' / 'system_clock.h',
    lib_incdir / '__chrono' / 'time_point.h',
    lib_incdir / '__chrono' / 'weekday.h',
    lib_incdir / '__chrono' / 'year.h',
    lib_incdir / '__chrono' / 'year_month.h',
    lib_incdir / '__chrono' / 'year_month_day.h',
    lib_incdir / '__chrono' / 'year_month_weekday.h',
  ],
  subdir: 'c++' / '__chrono',
)
install_headers([
    lib_incdir / '__compare' / 'common_comparison_category.h',
    lib_incdir / '__compare' / 'compare_partial_order_fallback.h',
    lib_incdir / '__compare' / 'compare_strong_order_fallback.h',
    lib_incdir / '__compare' / 'compare_three_way.h',
    lib_incdir / '__compare' / 'compare_three_way_result.h',
    lib_incdir / '__compare' / 'compare_weak_order_fallback.h',
    lib_incdir / '__compare' / 'is_eq.h',
    lib_incdir / '__compare' / 'ordering.h',
    lib_incdir / '__compare' / 'partial_order.h',
    lib_incdir / '__compare' / 'strong_order.h',
    lib_incdir / '__compare' / 'synth_three_way.h',
    lib_incdir / '__compare' / 'three_way_comparable.h',
    lib_incdir / '__compare' / 'weak_order.h',
  ],
  subdir: 'c++' / '__compare',
)
install_headers([
    lib_incdir / '__concepts' / 'arithmetic.h',
    lib_incdir / '__concepts' / 'assignable.h',
    lib_incdir / '__concepts' / 'boolean_testable.h',
    lib_incdir / '__concepts' / 'class_or_enum.h',
    lib_incdir / '__concepts' / 'common_reference_with.h',
    lib_incdir / '__concepts' / 'common_with.h',
    lib_incdir / '__concepts' / 'constructible.h',
    lib_incdir / '__concepts' / 'convertible_to.h',
    lib_incdir / '__concepts' / 'copyable.h',
    lib_incdir / '__concepts' / 'derived_from.h',
    lib_incdir / '__concepts' / 'destructible.h',
    lib_incdir / '__concepts' / 'different_from.h',
    lib_incdir / '__concepts' / 'equality_comparable.h',
    lib_incdir / '__concepts' / 'invocable.h',
    lib_incdir / '__concepts' / 'movable.h',
    lib_incdir / '__concepts' / 'predicate.h',
    lib_incdir / '__concepts' / 'regular.h',
    lib_incdir / '__concepts' / 'relation.h',
    lib_incdir / '__concepts' / 'same_as.h',
    lib_incdir / '__concepts' / 'semiregular.h',
    lib_incdir / '__concepts' / 'swappable.h',
    lib_incdir / '__concepts' / 'totally_ordered.h',
  ],
  subdir: 'c++' / '__concepts',
)
install_headers([
    lib_incdir / '__coroutine' / 'coroutine_handle.h',
    lib_incdir / '__coroutine' / 'coroutine_traits.h',
    lib_incdir / '__coroutine' / 'noop_coroutine_handle.h',
    lib_incdir / '__coroutine' / 'trivial_awaitables.h',
  ],
  subdir: 'c++' / '__coroutine',
)
install_headers([
    lib_incdir / '__debug_utils' / 'randomize_range.h',
  ],
  subdir: 'c++' / '__debug_utils',
)
install_headers([
    lib_incdir / '__filesystem' / 'copy_options.h',
    lib_incdir / '__filesystem' / 'directory_entry.h',
    lib_incdir / '__filesystem' / 'directory_iterator.h',
    lib_incdir / '__filesystem' / 'directory_options.h',
    lib_incdir / '__filesystem' / 'file_status.h',
    lib_incdir / '__filesystem' / 'file_time_type.h',
    lib_incdir / '__filesystem' / 'file_type.h',
    lib_incdir / '__filesystem' / 'filesystem_error.h',
    lib_incdir / '__filesystem' / 'operations.h',
    lib_incdir / '__filesystem' / 'path.h',
    lib_incdir / '__filesystem' / 'path_iterator.h',
    lib_incdir / '__filesystem' / 'perm_options.h',
    lib_incdir / '__filesystem' / 'perms.h',
    lib_incdir / '__filesystem' / 'recursive_directory_iterator.h',
    lib_incdir / '__filesystem' / 'space_info.h',
    lib_incdir / '__filesystem' / 'u8path.h',
  ],
  subdir: 'c++' / '__filesystem',
)
install_headers([
    lib_incdir / '__format' / 'buffer.h',
    lib_incdir / '__format' / 'concepts.h',
    lib_incdir / '__format' / 'enable_insertable.h',
    lib_incdir / '__format' / 'extended_grapheme_cluster_table.h',
    lib_incdir / '__format' / 'format_arg.h',
    lib_incdir / '__format' / 'format_arg_store.h',
    lib_incdir / '__format' / 'format_args.h',
    lib_incdir / '__format' / 'format_context.h',
    lib_incdir / '__format' / 'format_error.h',
    lib_incdir / '__format' / 'format_fwd.h',
    lib_incdir / '__format' / 'format_parse_context.h',
    lib_incdir / '__format' / 'format_string.h',
    lib_incdir / '__format' / 'format_to_n_result.h',
    lib_incdir / '__format' / 'formatter.h',
    lib_incdir / '__format' / 'formatter_bool.h',
    lib_incdir / '__format' / 'formatter_char.h',
    lib_incdir / '__format' / 'formatter_floating_point.h',
    lib_incdir / '__format' / 'formatter_integer.h',
    lib_incdir / '__format' / 'formatter_integral.h',
    lib_incdir / '__format' / 'formatter_output.h',
    lib_incdir / '__format' / 'formatter_pointer.h',
    lib_incdir / '__format' / 'formatter_string.h',
    lib_incdir / '__format' / 'parser_std_format_spec.h',
    lib_incdir / '__format' / 'unicode.h',
  ],
  subdir: 'c++' / '__format',
)
install_headers([
    lib_incdir / '__functional' / 'binary_function.h',
    lib_incdir / '__functional' / 'binary_negate.h',
    lib_incdir / '__functional' / 'bind.h',
    lib_incdir / '__functional' / 'bind_back.h',
    lib_incdir / '__functional' / 'bind_front.h',
    lib_incdir / '__functional' / 'binder1st.h',
    lib_incdir / '__functional' / 'binder2nd.h',
    lib_incdir / '__functional' / 'boyer_moore_searcher.h',
    lib_incdir / '__functional' / 'compose.h',
    lib_incdir / '__functional' / 'default_searcher.h',
    lib_incdir / '__functional' / 'function.h',
    lib_incdir / '__functional' / 'hash.h',
    lib_incdir / '__functional' / 'identity.h',
    lib_incdir / '__functional' / 'invoke.h',
    lib_incdir / '__functional' / 'is_transparent.h',
    lib_incdir / '__functional' / 'mem_fn.h',
    lib_incdir / '__functional' / 'mem_fun_ref.h',
    lib_incdir / '__functional' / 'not_fn.h',
    lib_incdir / '__functional' / 'operations.h',
    lib_incdir / '__functional' / 'perfect_forward.h',
    lib_incdir / '__functional' / 'pointer_to_binary_function.h',
    lib_incdir / '__functional' / 'pointer_to_unary_function.h',
    lib_incdir / '__functional' / 'ranges_operations.h',
    lib_incdir / '__functional' / 'reference_wrapper.h',
    lib_incdir / '__functional' / 'unary_function.h',
    lib_incdir / '__functional' / 'unary_negate.h',
    lib_incdir / '__functional' / 'unwrap_ref.h',
    lib_incdir / '__functional' / 'weak_result_type.h',
  ],
  subdir: 'c++' / '__functional',
)
install_headers([
    lib_incdir / '__fwd' / 'span.h',
    lib_incdir / '__fwd' / 'string_view.h',
  ],
  subdir: 'c++' / '__fwd',
)
install_headers([
    lib_incdir / '__ios' / 'fpos.h',
  ],
  subdir: 'c++' / '__ios',
)
install_headers([
    lib_incdir / '__iterator' / 'access.h',
    lib_incdir / '__iterator' / 'advance.h',
    lib_incdir / '__iterator' / 'back_insert_iterator.h',
    lib_incdir / '__iterator' / 'bounded_iter.h',
    lib_incdir / '__iterator' / 'common_iterator.h',
    lib_incdir / '__iterator' / 'concepts.h',
    lib_incdir / '__iterator' / 'counted_iterator.h',
    lib_incdir / '__iterator' / 'data.h',
    lib_incdir / '__iterator' / 'default_sentinel.h',
    lib_incdir / '__iterator' / 'distance.h',
    lib_incdir / '__iterator' / 'empty.h',
    lib_incdir / '__iterator' / 'erase_if_container.h',
    lib_incdir / '__iterator' / 'front_insert_iterator.h',
    lib_incdir / '__iterator' / 'incrementable_traits.h',
    lib_incdir / '__iterator' / 'indirectly_comparable.h',
    lib_incdir / '__iterator' / 'insert_iterator.h',
    lib_incdir / '__iterator' / 'istream_iterator.h',
    lib_incdir / '__iterator' / 'istreambuf_iterator.h',
    lib_incdir / '__iterator' / 'iter_move.h',
    lib_incdir / '__iterator' / 'iter_swap.h',
    lib_incdir / '__iterator' / 'iterator.h',
    lib_incdir / '__iterator' / 'iterator_traits.h',
    lib_incdir / '__iterator' / 'mergeable.h',
    lib_incdir / '__iterator' / 'move_iterator.h',
    lib_incdir / '__iterator' / 'move_sentinel.h',
    lib_incdir / '__iterator' / 'next.h',
    lib_incdir / '__iterator' / 'ostream_iterator.h',
    lib_incdir / '__iterator' / 'ostreambuf_iterator.h',
    lib_incdir / '__iterator' / 'permutable.h',
    lib_incdir / '__iterator' / 'prev.h',
    lib_incdir / '__iterator' / 'projected.h',
    lib_incdir / '__iterator' / 'readable_traits.h',
    lib_incdir / '__iterator' / 'reverse_access.h',
    lib_incdir / '__iterator' / 'reverse_iterator.h',
    lib_incdir / '__iterator' / 'size.h',
    lib_incdir / '__iterator' / 'sortable.h',
    lib_incdir / '__iterator' / 'unreachable_sentinel.h',
    lib_incdir / '__iterator' / 'wrap_iter.h',
  ],
  subdir: 'c++' / '__iterator',
)
install_headers([
    lib_incdir / '__memory' / 'addressof.h',
    lib_incdir / '__memory' / 'allocate_at_least.h',
    lib_incdir / '__memory' / 'allocation_guard.h',
    lib_incdir / '__memory' / 'allocator.h',
    lib_incdir / '__memory' / 'allocator_arg_t.h',
    lib_incdir / '__memory' / 'allocator_traits.h',
    lib_incdir / '__memory' / 'assume_aligned.h',
    lib_incdir / '__memory' / 'auto_ptr.h',
    lib_incdir / '__memory' / 'compressed_pair.h',
    lib_incdir / '__memory' / 'concepts.h',
    lib_incdir / '__memory' / 'construct_at.h',
    lib_incdir / '__memory' / 'pointer_traits.h',
    lib_incdir / '__memory' / 'ranges_construct_at.h',
    lib_incdir / '__memory' / 'ranges_uninitialized_algorithms.h',
    lib_incdir / '__memory' / 'raw_storage_iterator.h',
    lib_incdir / '__memory' / 'shared_ptr.h',
    lib_incdir / '__memory' / 'temporary_buffer.h',
    lib_incdir / '__memory' / 'uninitialized_algorithms.h',
    lib_incdir / '__memory' / 'unique_ptr.h',
    lib_incdir / '__memory' / 'uses_allocator.h',
    lib_incdir / '__memory' / 'voidify.h',
  ],
  subdir: 'c++' / '__memory',
)
install_headers([
    lib_incdir / '__numeric' / 'accumulate.h',
    lib_incdir / '__numeric' / 'adjacent_difference.h',
    lib_incdir / '__numeric' / 'exclusive_scan.h',
    lib_incdir / '__numeric' / 'gcd_lcm.h',
    lib_incdir / '__numeric' / 'inclusive_scan.h',
    lib_incdir / '__numeric' / 'inner_product.h',
    lib_incdir / '__numeric' / 'iota.h',
    lib_incdir / '__numeric' / 'midpoint.h',
    lib_incdir / '__numeric' / 'partial_sum.h',
    lib_incdir / '__numeric' / 'reduce.h',
    lib_incdir / '__numeric' / 'transform_exclusive_scan.h',
    lib_incdir / '__numeric' / 'transform_inclusive_scan.h',
    lib_incdir / '__numeric' / 'transform_reduce.h',
  ],
  subdir: 'c++' / '__numeric',
)
install_headers([
    lib_incdir / '__random' / 'bernoulli_distribution.h',
    lib_incdir / '__random' / 'binomial_distribution.h',
    lib_incdir / '__random' / 'cauchy_distribution.h',
    lib_incdir / '__random' / 'chi_squared_distribution.h',
    lib_incdir / '__random' / 'clamp_to_integral.h',
    lib_incdir / '__random' / 'default_random_engine.h',
    lib_incdir / '__random' / 'discard_block_engine.h',
    lib_incdir / '__random' / 'discrete_distribution.h',
    lib_incdir / '__random' / 'exponential_distribution.h',
    lib_incdir / '__random' / 'extreme_value_distribution.h',
    lib_incdir / '__random' / 'fisher_f_distribution.h',
    lib_incdir / '__random' / 'gamma_distribution.h',
    lib_incdir / '__random' / 'generate_canonical.h',
    lib_incdir / '__random' / 'geometric_distribution.h',
    lib_incdir / '__random' / 'independent_bits_engine.h',
    lib_incdir / '__random' / 'is_seed_sequence.h',
    lib_incdir / '__random' / 'is_valid.h',
    lib_incdir / '__random' / 'knuth_b.h',
    lib_incdir / '__random' / 'linear_congruential_engine.h',
    lib_incdir / '__random' / 'log2.h',
    lib_incdir / '__random' / 'lognormal_distribution.h',
    lib_incdir / '__random' / 'mersenne_twister_engine.h',
    lib_incdir / '__random' / 'negative_binomial_distribution.h',
    lib_incdir / '__random' / 'normal_distribution.h',
    lib_incdir / '__random' / 'piecewise_constant_distribution.h',
    lib_incdir / '__random' / 'piecewise_linear_distribution.h',
    lib_incdir / '__random' / 'poisson_distribution.h',
    lib_incdir / '__random' / 'random_device.h',
    lib_incdir / '__random' / 'ranlux.h',
    lib_incdir / '__random' / 'seed_seq.h',
    lib_incdir / '__random' / 'shuffle_order_engine.h',
    lib_incdir / '__random' / 'student_t_distribution.h',
    lib_incdir / '__random' / 'subtract_with_carry_engine.h',
    lib_incdir / '__random' / 'uniform_int_distribution.h',
    lib_incdir / '__random' / 'uniform_random_bit_generator.h',
    lib_incdir / '__random' / 'uniform_real_distribution.h',
    lib_incdir / '__random' / 'weibull_distribution.h',
  ],
  subdir: 'c++' / '__random',
)
install_headers([
    lib_incdir / '__ranges' / 'access.h',
    lib_incdir / '__ranges' / 'all.h',
    lib_incdir / '__ranges' / 'common_view.h',
    lib_incdir / '__ranges' / 'concepts.h',
    lib_incdir / '__ranges' / 'copyable_box.h',
    lib_incdir / '__ranges' / 'counted.h',
    lib_incdir / '__ranges' / 'dangling.h',
    lib_incdir / '__ranges' / 'data.h',
    lib_incdir / '__ranges' / 'drop_view.h',
    lib_incdir / '__ranges' / 'empty.h',
    lib_incdir / '__ranges' / 'empty_view.h',
    lib_incdir / '__ranges' / 'enable_borrowed_range.h',
    lib_incdir / '__ranges' / 'enable_view.h',
    lib_incdir / '__ranges' / 'filter_view.h',
    lib_incdir / '__ranges' / 'iota_view.h',
    lib_incdir / '__ranges' / 'join_view.h',
    lib_incdir / '__ranges' / 'lazy_split_view.h',
    lib_incdir / '__ranges' / 'non_propagating_cache.h',
    lib_incdir / '__ranges' / 'owning_view.h',
    lib_incdir / '__ranges' / 'range_adaptor.h',
    lib_incdir / '__ranges' / 'rbegin.h',
    lib_incdir / '__ranges' / 'ref_view.h',
    lib_incdir / '__ranges' / 'rend.h',
    lib_incdir / '__ranges' / 'reverse_view.h',
    lib_incdir / '__ranges' / 'single_view.h',
    lib_incdir / '__ranges' / 'size.h',
    lib_incdir / '__ranges' / 'subrange.h',
    lib_incdir / '__ranges' / 'take_view.h',
    lib_incdir / '__ranges' / 'transform_view.h',
    lib_incdir / '__ranges' / 'view_interface.h',
    lib_incdir / '__ranges' / 'views.h',
    lib_incdir / '__ranges' / 'zip_view.h',
  ],
  subdir: 'c++' / '__ranges',
)
install_headers([
    lib_incdir / '__string' / 'char_traits.h',
    lib_incdir / '__string' / 'extern_template_lists.h',
  ],
  subdir: 'c++' / '__string',
)
install_headers([
    lib_incdir / '__thread' / 'poll_with_backoff.h',
    lib_incdir / '__thread' / 'timed_backoff_policy.h',
  ],
  subdir: 'c++' / '__thread',
)
install_headers([
    lib_incdir / '__type_traits' / 'add_const.h',
    lib_incdir / '__type_traits' / 'add_cv.h',
    lib_incdir / '__type_traits' / 'add_lvalue_reference.h',
    lib_incdir / '__type_traits' / 'add_pointer.h',
    lib_incdir / '__type_traits' / 'add_rvalue_reference.h',
    lib_incdir / '__type_traits' / 'add_volatile.h',
    lib_incdir / '__type_traits' / 'aligned_storage.h',
    lib_incdir / '__type_traits' / 'aligned_union.h',
    lib_incdir / '__type_traits' / 'alignment_of.h',
    lib_incdir / '__type_traits' / 'apply_cv.h',
    lib_incdir / '__type_traits' / 'common_reference.h',
    lib_incdir / '__type_traits' / 'common_type.h',
    lib_incdir / '__type_traits' / 'conditional.h',
    lib_incdir / '__type_traits' / 'conjunction.h',
    lib_incdir / '__type_traits' / 'copy_cv.h',
    lib_incdir / '__type_traits' / 'copy_cvref.h',
    lib_incdir / '__type_traits' / 'decay.h',
    lib_incdir / '__type_traits' / 'disjunction.h',
    lib_incdir / '__type_traits' / 'enable_if.h',
    lib_incdir / '__type_traits' / 'extent.h',
    lib_incdir / '__type_traits' / 'has_unique_object_representation.h',
    lib_incdir / '__type_traits' / 'has_virtual_destructor.h',
    lib_incdir / '__type_traits' / 'integral_constant.h',
    lib_incdir / '__type_traits' / 'is_abstract.h',
    lib_incdir / '__type_traits' / 'is_aggregate.h',
    lib_incdir / '__type_traits' / 'is_arithmetic.h',
    lib_incdir / '__type_traits' / 'is_array.h',
    lib_incdir / '__type_traits' / 'is_assignable.h',
    lib_incdir / '__type_traits' / 'is_base_of.h',
    lib_incdir / '__type_traits' / 'is_bounded_array.h',
    lib_incdir / '__type_traits' / 'is_callable.h',
    lib_incdir / '__type_traits' / 'is_class.h',
    lib_incdir / '__type_traits' / 'is_compound.h',
    lib_incdir / '__type_traits' / 'is_const.h',
    lib_incdir / '__type_traits' / 'is_constant_evaluated.h',
    lib_incdir / '__type_traits' / 'is_constructible.h',
    lib_incdir / '__type_traits' / 'is_convertible.h',
    lib_incdir / '__type_traits' / 'is_copy_assignable.h',
    lib_incdir / '__type_traits' / 'is_copy_constructible.h',
    lib_incdir / '__type_traits' / 'is_core_convertible.h',
    lib_incdir / '__type_traits' / 'is_default_constructible.h',
    lib_incdir / '__type_traits' / 'is_destructible.h',
    lib_incdir / '__type_traits' / 'is_empty.h',
    lib_incdir / '__type_traits' / 'is_enum.h',
    lib_incdir / '__type_traits' / 'is_final.h',
    lib_incdir / '__type_traits' / 'is_floating_point.h',
    lib_incdir / '__type_traits' / 'is_function.h',
    lib_incdir / '__type_traits' / 'is_fundamental.h',
    lib_incdir / '__type_traits' / 'is_integral.h',
    lib_incdir / '__type_traits' / 'is_literal_type.h',
    lib_incdir / '__type_traits' / 'is_member_function_pointer.h',
    lib_incdir / '__type_traits' / 'is_member_object_pointer.h',
    lib_incdir / '__type_traits' / 'is_member_pointer.h',
    lib_incdir / '__type_traits' / 'is_move_assignable.h',
    lib_incdir / '__type_traits' / 'is_move_constructible.h',
    lib_incdir / '__type_traits' / 'is_nothrow_assignable.h',
    lib_incdir / '__type_traits' / 'is_nothrow_constructible.h',
    lib_incdir / '__type_traits' / 'is_nothrow_convertible.h',
    lib_incdir / '__type_traits' / 'is_nothrow_copy_assignable.h',
    lib_incdir / '__type_traits' / 'is_nothrow_copy_constructible.h',
    lib_incdir / '__type_traits' / 'is_nothrow_default_constructible.h',
    lib_incdir / '__type_traits' / 'is_nothrow_destructible.h',
    lib_incdir / '__type_traits' / 'is_nothrow_move_assignable.h',
    lib_incdir / '__type_traits' / 'is_nothrow_move_constructible.h',
    lib_incdir / '__type_traits' / 'is_null_pointer.h',
    lib_incdir / '__type_traits' / 'is_object.h',
    lib_incdir / '__type_traits' / 'is_pod.h',
    lib_incdir / '__type_traits' / 'is_pointer.h',
    lib_incdir / '__type_traits' / 'is_polymorphic.h',
    lib_incdir / '__type_traits' / 'is_primary_template.h',
    lib_incdir / '__type_traits' / 'is_reference.h',
    lib_incdir / '__type_traits' / 'is_reference_wrapper.h',
    lib_incdir / '__type_traits' / 'is_referenceable.h',
    lib_incdir / '__type_traits' / 'is_same.h',
    lib_incdir / '__type_traits' / 'is_scalar.h',
    lib_incdir / '__type_traits' / 'is_scoped_enum.h',
    lib_incdir / '__type_traits' / 'is_signed.h',
    lib_incdir / '__type_traits' / 'is_signed_integer.h',
    lib_incdir / '__type_traits' / 'is_standard_layout.h',
    lib_incdir / '__type_traits' / 'is_trivial.h',
    lib_incdir / '__type_traits' / 'is_trivially_assignable.h',
    lib_incdir / '__type_traits' / 'is_trivially_constructible.h',
    lib_incdir / '__type_traits' / 'is_trivially_copy_assignable.h',
    lib_incdir / '__type_traits' / 'is_trivially_copy_constructible.h',
    lib_incdir / '__type_traits' / 'is_trivially_copyable.h',
    lib_incdir / '__type_traits' / 'is_trivially_default_constructible.h',
    lib_incdir / '__type_traits' / 'is_trivially_destructible.h',
    lib_incdir / '__type_traits' / 'is_trivially_move_assignable.h',
    lib_incdir / '__type_traits' / 'is_trivially_move_constructible.h',
    lib_incdir / '__type_traits' / 'is_unbounded_array.h',
    lib_incdir / '__type_traits' / 'is_union.h',
    lib_incdir / '__type_traits' / 'is_unsigned.h',
    lib_incdir / '__type_traits' / 'is_unsigned_integer.h',
    lib_incdir / '__type_traits' / 'is_valid_expansion.h',
    lib_incdir / '__type_traits' / 'is_void.h',
    lib_incdir / '__type_traits' / 'is_volatile.h',
    lib_incdir / '__type_traits' / 'lazy.h',
    lib_incdir / '__type_traits' / 'make_32_64_or_128_bit.h',
    lib_incdir / '__type_traits' / 'make_signed.h',
    lib_incdir / '__type_traits' / 'make_unsigned.h',
    lib_incdir / '__type_traits' / 'nat.h',
    lib_incdir / '__type_traits' / 'negation.h',
    lib_incdir / '__type_traits' / 'promote.h',
    lib_incdir / '__type_traits' / 'rank.h',
    lib_incdir / '__type_traits' / 'remove_all_extents.h',
    lib_incdir / '__type_traits' / 'remove_const.h',
    lib_incdir / '__type_traits' / 'remove_cv.h',
    lib_incdir / '__type_traits' / 'remove_cvref.h',
    lib_incdir / '__type_traits' / 'remove_extent.h',
    lib_incdir / '__type_traits' / 'remove_pointer.h',
    lib_incdir / '__type_traits' / 'remove_reference.h',
    lib_incdir / '__type_traits' / 'remove_volatile.h',
    lib_incdir / '__type_traits' / 'type_identity.h',
    lib_incdir / '__type_traits' / 'type_list.h',
    lib_incdir / '__type_traits' / 'underlying_type.h',
    lib_incdir / '__type_traits' / 'void_t.h',
  ],
  subdir: 'c++' / '__type_traits',
)
install_headers([
    lib_incdir / '__utility' / 'as_const.h',
    lib_incdir / '__utility' / 'auto_cast.h',
    lib_incdir / '__utility' / 'cmp.h',
    lib_incdir / '__utility' / 'declval.h',
    lib_incdir / '__utility' / 'exchange.h',
    lib_incdir / '__utility' / 'forward.h',
    lib_incdir / '__utility' / 'in_place.h',
    lib_incdir / '__utility' / 'integer_sequence.h',
    lib_incdir / '__utility' / 'move.h',
    lib_incdir / '__utility' / 'pair.h',
    lib_incdir / '__utility' / 'piecewise_construct.h',
    lib_incdir / '__utility' / 'priority_tag.h',
    lib_incdir / '__utility' / 'rel_ops.h',
    lib_incdir / '__utility' / 'swap.h',
    lib_incdir / '__utility' / 'to_underlying.h',
    lib_incdir / '__utility' / 'transaction.h',
    lib_incdir / '__utility' / 'unreachable.h',
  ],
  subdir: 'c++' / '__utility',
)
install_headers([
    lib_incdir / '__variant' / 'monostate.h',
  ],
  subdir: 'c++' / '__variant',
)
install_headers([
    lib_incdir / 'experimental' / '__config',
    lib_incdir / 'experimental' / '__memory',
    lib_incdir / 'experimental' / 'algorithm',
    lib_incdir / 'experimental' / 'coroutine',
    lib_incdir / 'experimental' / 'deque',
    lib_incdir / 'experimental' / 'forward_list',
    lib_incdir / 'experimental' / 'functional',
    lib_incdir / 'experimental' / 'iterator',
    lib_incdir / 'experimental' / 'list',
    lib_incdir / 'experimental' / 'map',
    lib_incdir / 'experimental' / 'memory_resource',
    lib_incdir / 'experimental' / 'propagate_const',
    lib_incdir / 'experimental' / 'regex',
    lib_incdir / 'experimental' / 'set',
    lib_incdir / 'experimental' / 'simd',
    lib_incdir / 'experimental' / 'string',
    lib_incdir / 'experimental' / 'type_traits',
    lib_incdir / 'experimental' / 'unordered_map',
    lib_incdir / 'experimental' / 'unordered_set',
    lib_incdir / 'experimental' / 'utility',
    lib_incdir / 'experimental' / 'vector',
  ],
  subdir: 'c++' / 'experimental',
)
install_headers([
    lib_incdir / 'ext' / '__hash',
    lib_incdir / 'ext' / 'hash_map',
    lib_incdir / 'ext' / 'hash_set',
  ],
  subdir: 'c++' / 'ext',
)

cdata = configuration_data()
cdata.set('_LIBCPP_ABI_NAMESPACE', '__1')
cdata.set('_LIBCPP_ABI_VERSION', 1)
cdata.set('_LIBCPP_DISABLE_VISIBILITY_ANNOTATIONS', true)
abi_defines = []
extra_site_defines = []
if get_option('default_library') == 'static'
  cdata.set('_LIBCPP_DISABLE_VISIBILITY_ANNOTATIONS', true)
  abi_defines += '#define _LIBCXXABI_DISABLE_VISIBILITY_ANNOTATIONS'
endif
cdata.set('_LIBCPP_ABI_DEFINES', '\n'.join(abi_defines))
cdata.set('_LIBCPP_EXTRA_SITE_DEFINES', '\n'.join(extra_site_defines))

configure_file(
  input: lib_incdir / '__config_site.in',
  output: '__config_site',
  configuration: cdata,
  format: 'cmake@',
  install: true,
  install_dir: get_option('includedir') / 'c++',
)

abi_sources = [
  abi_srcdir / 'abort_message.cpp',
  abi_srcdir / 'cxa_aux_runtime.cpp',
  abi_srcdir / 'cxa_default_handlers.cpp',
  abi_srcdir / 'cxa_exception.cpp',
  abi_srcdir / 'cxa_exception_storage.cpp',
  abi_srcdir / 'cxa_guard.cpp',
  abi_srcdir / 'cxa_handlers.cpp',
  abi_srcdir / 'cxa_personality.cpp',
  abi_srcdir / 'cxa_vector.cpp',
  abi_srcdir / 'cxa_virtual.cpp',
  abi_srcdir / 'fallback_malloc.cpp',
  abi_srcdir / 'private_typeinfo.cpp',
  abi_srcdir / 'stdlib_exception.cpp',
  abi_srcdir / 'stdlib_stdexcept.cpp',
  abi_srcdir / 'stdlib_typeinfo.cpp',
]

lib_sources = [
  lib_srcdir / 'algorithm.cpp',
  lib_srcdir / 'any.cpp',
  lib_srcdir / 'assert.cpp',
  lib_srcdir / 'atomic.cpp',
  lib_srcdir / 'barrier.cpp',
  lib_srcdir / 'bind.cpp',
  lib_srcdir / 'charconv.cpp',
  lib_srcdir / 'chrono.cpp',
  lib_srcdir / 'condition_variable.cpp',
  lib_srcdir / 'condition_variable_destructor.cpp',
  lib_srcdir / 'debug.cpp',
  lib_srcdir / 'exception.cpp',
  lib_srcdir / 'format.cpp',
  lib_srcdir / 'functional.cpp',
  lib_srcdir / 'future.cpp',
  lib_srcdir / 'hash.cpp',
  lib_srcdir / 'ios.cpp',
  lib_srcdir / 'ios.instantiations.cpp',
  lib_srcdir / 'iostream.cpp',
  lib_srcdir / 'legacy_debug_handler.cpp',
  lib_srcdir / 'legacy_pointer_safety.cpp',
  lib_srcdir / 'locale.cpp',
  lib_srcdir / 'memory.cpp',
  lib_srcdir / 'mutex.cpp',
  lib_srcdir / 'mutex_destructor.cpp',
  lib_srcdir / 'new.cpp',
  lib_srcdir / 'optional.cpp',
  lib_srcdir / 'random.cpp',
  lib_srcdir / 'random_shuffle.cpp',
  lib_srcdir / 'regex.cpp',
  lib_srcdir / 'ryu/d2fixed.cpp',
  lib_srcdir / 'ryu/d2s.cpp',
  lib_srcdir / 'ryu/f2s.cpp',
  lib_srcdir / 'shared_mutex.cpp',
  lib_srcdir / 'stdexcept.cpp',
  lib_srcdir / 'string.cpp',
  lib_srcdir / 'strstream.cpp',
  lib_srcdir / 'system_error.cpp',
  lib_srcdir / 'thread.cpp',
  lib_srcdir / 'typeinfo.cpp',
  lib_srcdir / 'utility.cpp',
  lib_srcdir / 'valarray.cpp',
  lib_srcdir / 'variant.cpp',
  lib_srcdir / 'vector.cpp',
]

incdirs = include_directories(
  'libcxx' / 'src',
  lib_incdir,
  'libcxxabi' / 'include',
)

cpp_options = [
  'cpp_std=c++20',
]

cpp_args = [
  '-nostdinc++',
  '-D_LIBCPP_BUILDING_LIBRARY',
  '-DLIBCXX_BUILDING_LIBCXXABI',
  '-D_LIBCPP_ENABLE_NODISCARD',
]

libdir = get_option('libdir') / 'c++'

libcxxabi = library('c++abi', abi_sources,
  override_options: cpp_options,
  cpp_args: cpp_args + [
    '-DLIBCXXABI_SILENT_TERMINATE',
  ],
  include_directories: incdirs,
  install: true,
  install_dir: libdir,
)

libcxx = library('c++', lib_sources,
  override_options: cpp_options,
  cpp_args: cpp_args,
  include_directories: incdirs,
  link_with: libcxxabi,
  install: true,
  install_dir: libdir,
)
